--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -23,3 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{inputs.custom_message}}"
+      - name: Printing run-job boolean value
+        if: ${{inputs.run_job == 'true'}}
+        run: echo "${{inputs.run_job}}"
