--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -24,5 +24,5 @@ jobs:
     steps:
       - run: echo "${{inputs.custom_message}}"
       - name: Printing run-job boolean value
-        if: ${{inputs.run_job == 'true'}}
+        if: ${{inputs.run_job == true}}
         run: echo "${{inputs.run_job}}"
